--- a/templates/login/modal.html.twig
+++ b/templates/login/modal.html.twig
@@ -11,11 +11,11 @@
                                  <div class="alert alert-danger" style="display:none;font-size: 0.7rem;" id="login-alert"></div>
                                  <div class="alert alert-success" style="display:none;font-size: 0.5rem;" id="login-success"></div>
                             <div class="form-group champ">
-                                 <input type="email" id="login_email" class="form-control" name="LoginEmail" placeholder="Email">
+                                 <input type="email" id="login_email" class="form-control" name="_username" placeholder="Email">
                             </div>
 
                             <div class="form-group champ">
-                                 <input type="password" id="login_password" class="form-control" name="password" placeholder="Mot de passe"> 
+                                 <input type="password" id="login_password" class="form-control" name="_password" placeholder="Mot de passe"> 
                             </div>
 
                              <input type="hidden" name="api_token" id="api_token">
