--- a/templates/users/settings/base.html.twig
+++ b/templates/users/settings/base.html.twig
@@ -37,7 +37,7 @@
                     <!--img logo-->
                     <div class="image-upload">
                         <label for="cameraInput">
-                            <img src="{{ user.avatar }}" alt="" id="profil">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="" id="profil">
                             <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                         </label>
                         <input type="file" accept="image/*" id="cameraInput">
@@ -48,11 +48,11 @@
                     <div class="row mb-3">
                         <div class="col-sm">
                             <div class="form-group setting">
-                                <input type='text' id="username" class='form-control text-center text-black' placeholder='username' value='{{user.username}}'>
+                                <input type='text' id="username" class='form-control text-center text-black' placeholder='username' value=''>
                             </div>
 
                             <div class="form-group setting">
-                                <input type="submit" id="envoyer" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" value="Enregistrer">
+                                <input type="submit" id="update_user" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
                             </div>
                         </div>
                      </div>  
@@ -74,19 +74,19 @@
                         <div class="col-sm">
 
                             <div class="image-upload">
-                                <label for="cameraInput">
-                                    <img src="{{ user.avatar }}" alt="image" id="avatarChannel">
+                                <label for="cameraInputChannel">
+                                    <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="image" id="avatarChannel">
                                     <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                                 </label>
-                                <input type="file" accept="image/*" id="cameraInput">
+                                <input type="file" accept="image/*" id="cameraInputChannel">
                             </div>
 
                             <div class="form-group setting">
-                                <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value='{{user.channels}}'>
+                                <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value=''>
                             </div>
 
                             <div class="form-group setting">
-                                <input type="submit" id="channelSave" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" value="Enregistrer">
+                                <input type="submit" id="channelSave" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
                             </div>
                         </div>
                     </div> 
@@ -111,11 +111,11 @@
                         <div class="col-sm">
 
                             <div class="form-group setting">
-                                <input type='password' id="password" class='form-control text-center text-black' placeholder='mot de passe' value='{{user.password}}'>
+                                <input type='password' id="password" class='form-control text-center text-black' placeholder='mot de passe' value=''>
                             </div>
 
                             <div class="form-group setting">
-                                <input type="submit" id="savePassword" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" value="Enregistrer">
+                                <input type="submit" id="savePassword" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
                             </div>
                         </div>
                     </div> 
@@ -146,18 +146,4 @@
 {% include 'Users/Settings/script.html.twig' %}
 
 </body>
-                        <!--<div class="col-sm">
-                            <div class="form-group setting">
-                            <input type="text" class="form-control text-center text-black" id="nom" value="">
-                        </div>
-                         <div class="form-group setting">
-                            <input type="text" class="form-control text-center text-black" id="nomChaine" value="">
-                        </div>
-                        <div class="form-group setting">
-                            <input type="password" class="form-control text-center text-black" id="mdp" value="">
-                        </div>
-                        <div class="form-group setting">
-                            <input type="button" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" value="Enregistrer">
-                        </div>
-                        </div>-->
 </html>
